--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <button data-index="14"><span></span></button>
       <button data-index="15"><span></span></button>
     </div>
+    <h2 id="time"></h2>
     <h2></h2>
   </body>
   <script src="script.js"></script>
